# ask-me-anything

./: .gitignore  README.md
.github/workflows/: build-release.yml  lint.yaml
mcp-ai-desktop/: .env.example  BACKEND_CONFIGURATION.md  MULTI_BACKEND_README.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  renderer.js  settings.html  settings.js  settings_preload.js  style.css
mcp-ai-desktop/mcp_example_servers/: mcp_server_calc.py  mcp_server_weather.py
mcp-ai-desktop/mcp_servers/: mcp_server_triples.py
mcp-gemini-desktop/: index.html  main.js  preload.js  renderer.js  settings.html
python_backend/: .gitignore  mcp_servers.json  pyproject.toml
python_backend/src/backend/: ai_backend_manager.py  config_manager.py  conversation_db.py  mcp_chat_app.py  mcp_fastapi_backend.py  mcp_flask_backend.py
python_backend/src/backend/knowledge-graph/: README.md
python_backend/src/backend/mcp_servers/: mcp_server_triples.py
