[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "google-genai>=1.7.0",
    "httpx>=0.28.1",
    "mcp>=1.5.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.52.0",
    "openai>=1.54.0",
    "requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]
