[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-genai>=1.7.0",
    "httpx>=0.28.1",
    "fastmcp>=1.5.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.52.0",
    "openai>=1.54.0",
    "requests>=2.32.0",
    "pandas>=2.3.1",
    "duckdb>=1.3.2",
    "mlx-lm>=0.26.4; sys_platform == 'darwin'",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
